--- a/client/my-app/src/Styles/Header.scss
+++ b/client/my-app/src/Styles/Header.scss
@@ -1,9 +1,6 @@
-$honey-color: #37caeb;
+$light-blue: #37caeb;
 $main-color:#253037;
 .header{
-    -webkit-user-select: none; /* Safari */
-            -ms-user-select: none; /* IE 10 and IE 11 */
-            user-select: none; /* Standard syntax */
     position: absolute;
     display: flex;
     height: 10vh;
@@ -14,9 +11,10 @@ $main-color:#253037;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: $honey-color;
+    color: $light-blue;
+    border-bottom: 1px solid $light-blue;
     h1{
-        font-size: min(5vh, 4vw);
+        font-size: min(5.5vh, 4vw);
         font-weight: 100;
     }
     img{
