Style Update, Currency added

--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -33,7 +33,7 @@ table {
 
     thead tr {
         height: 60px;
-        background: #86a2ff;
+        background: #9ab0f7;
         font-size: 16px;
     }
 
