--- a/client/my-app/src/Styles/Main.scss
+++ b/client/my-app/src/Styles/Main.scss
@@ -4,6 +4,7 @@ body{
     background-color: aliceblue;
     font-family: "Roboto", "sans-serif";
     background-color:$main-color;
+    color: rgb(0, 0, 0);
 }
 
 .main{
