Show/Hide button works. Task 2 completed!

--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -11,6 +11,10 @@ $gl-lg : "screen and (max-width: 80em)"; // max 1280px
 
 // table style
 
+.show-button{
+    color: rgb(216, 22, 22);
+}
+
 table {
     border-spacing: 1;
     border-collapse: collapse;
