Added CheckList component, saving checked items

--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -13,6 +13,9 @@ $gl-lg : "screen and (max-width: 80em)"; // max 1280px
 
 .show-button{
     color: rgb(216, 22, 22);
+    &:hover{
+        cursor: pointer;
+    }
 }
 
 table {
