--- a/client/my-app/src/Styles/Main.scss
+++ b/client/my-app/src/Styles/Main.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap%27');
+
 $honey-color: #eba937;
 $main-color:#253037;
+
 body{
     background-color: aliceblue;
     font-family: "Roboto", "sans-serif";
