--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -46,7 +46,7 @@ table {
 
     tbody tr {
         height: 48px;
-        border-bottom: 1px solid #E3F1D5;
+        border-bottom: 1px solid #839697;
 
         &:last-child {
             border: 0;
