--- a/client/my-app/src/Styles/Filters.scss
+++ b/client/my-app/src/Styles/Filters.scss
@@ -1,12 +1,12 @@
 .filter-container{
     display: flex;
     justify-content: space-around;
-    align-self: center;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 8px;
     width: 60vw;
     height: 20vh;
     margin-bottom: 5vh;
+    margin-top: 15vh;
 
     h3{
         text-decoration: underline;
@@ -15,7 +15,6 @@
     .check-list{
         display:flex;
         flex-direction: column;
-        
         .list-container{
             overflow: auto;
         }
