--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -19,6 +19,7 @@ $gl-lg : "screen and (max-width: 80em)"; // max 1280px
 }
 
 table {
+    border: solid black 1px;
     border-spacing: 1;
     border-collapse: collapse;
     background: white;
