--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -9,6 +9,7 @@ $gl-sm : "screen and (max-width: 48em)"; // max 768px
 $gl-md : "screen and (max-width: 64em)"; // max 1024px
 $gl-lg : "screen and (max-width: 80em)"; // max 1280px
 
+
 // table style
 
 .show-button{
@@ -133,5 +134,8 @@ table {
     }
 }
 
+.price{
+    color: #cb3884;
+}
 
 
