--- a/client/my-app/src/Styles/Main.scss
+++ b/client/my-app/src/Styles/Main.scss
@@ -7,6 +7,10 @@ body{
     font-family: "Roboto", "sans-serif";
     background-color:$main-color;
     color: rgb(0, 0, 0);
+    margin: 0;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: 100%;
 }
 
 .main{
@@ -15,7 +19,4 @@ body{
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: 100%;
 }
