Price is now a range slider

--- a/client/my-app/src/Styles/Filters.scss
+++ b/client/my-app/src/Styles/Filters.scss
@@ -9,7 +9,9 @@
     margin-top: 15vh;
 
     h3{
+        font-size: 130%;
         text-decoration: underline;
+        text-align: center;
     }
 
     .check-list{
