--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -26,7 +26,7 @@ table {
     background: white;
     border-radius: 6px;
     overflow: hidden;
-    max-width: 800px;
+    max-width: 50%;
     width: 100%;
     margin: 10px;
     position: relative;
