--- a/client/my-app/src/Styles/FlightContainer.scss
+++ b/client/my-app/src/Styles/FlightContainer.scss
@@ -10,7 +10,6 @@ $gl-md : "screen and (max-width: 64em)"; // max 1024px
 $gl-lg : "screen and (max-width: 80em)"; // max 1280px
 
 
-// table style
 
 .show-button{
     color: rgb(216, 22, 22);
@@ -18,6 +17,8 @@ $gl-lg : "screen and (max-width: 80em)"; // max 1280px
         cursor: pointer;
     }
 }
+
+// Table style
 
 table {
     border: solid black 1px;
@@ -31,19 +32,25 @@ table {
     margin: 10px;
     position: relative;
 
+    td{
+        font-size: 17px;
+        border: solid rgba(25, 0, 210, 0.267) 1px;
+    }
+
     * {
         position: relative
     }
 
     td,
     th {
-        padding-left: 8px
+        padding-left: 8px;
     }
 
     thead tr {
+        
         height: 60px;
         background: #9ab0f7;
-        font-size: 16px;
+        font-size: 17px;
     }
 
     tbody tr {
@@ -57,7 +64,8 @@ table {
 
     td,
     th {
-        text-align: left;
+        
+        text-align: center;
 
         &.l {
             text-align: right
